[tool.poetry]
name = "langchain-cisco-support-py"
version = "1.0.0"
description = "LangChain agent with OpenRouter and Cisco MCP integration (Python version)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
python-dotenv = "^1.0.0"
mcp = "^1.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
